--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -1,6 +1,3 @@
-// 引入字体图标库
-@import 'http://at.alicdn.com/t/font_1792066_2k3dygi3zme.css';
-
 * {
   padding: 0;
   margin: 0;
@@ -16,6 +13,29 @@
   left: 0;
   right: 0;
   bottom: 0;
+}
+/* 字体换行 */
+.text-ellipsis,
+.text-ellipsis-2 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box !important;
+  -webkit-box-orient: vertical;
+  word-break: break-all;
+}
+.text-ellipsis {
+  -webkit-line-clamp: 1;
+}
+.text-ellipsis-2 {
+  -webkit-line-clamp: 2;
+}
+// 粗字体
+.fw700 {
+  font-weight: 700;
+}
+// 细字体
+.fw400 {
+  font-weight: 400;
 }
 // 点击手势
 .gesture--click {
