--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "YouSheBiaoTiHei";
+  src: url("https://material-1258771799.cos.ap-shanghai.myqcloud.com/shop/ccc.ttf");
+}
 * {
   padding: 0;
   margin: 0;
@@ -5,6 +9,10 @@
 #app {
   font-size: 14px;
   color: #606266;
+}
+img,
+video {
+  vertical-align: middle;
 }
 // 固定填满布局
 .fixed-view {
